finish gemoetries class

--- a/04-webpack/src/index.html
+++ b/04-webpack/src/index.html
@@ -9,8 +9,7 @@
 
 <body>
     <!-- <canvas id="webgl"></canvas> -->
-    <canvas id="basic-animations-webgl"></canvas>
-    <canvas id="cameras-webgl"></canvas>
+    <canvas id="default-webgl"></canvas>
 </body>
 
 </html>
