--- a/src/routes/canvas.html
+++ b/src/routes/canvas.html
@@ -3,14 +3,13 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ThreeJS Examples</title>
-    <base href="/">
+    <title>Canvas</title>
 </head>
 
 <body>
-    <div id="routes">
-    </div>
+    <canvas id="default-webgl"></canvas>
 </body>
 
 </html>
